--- a/BkperApp/.settings/com.google.gdt.eclipse.drive.prefs
+++ b/BkperApp/.settings/com.google.gdt.eclipse.drive.prefs
@@ -25,6 +25,7 @@ driveImportName.TransactionIterator.gs=TransactionIterator
 driveImportName.TransactionPage_.gs=TransactionPage_
 driveImportName.TransactionService_.gs=TransactionService_
 driveImportName.TransactionsDataTableBuilder.gs=TransactionsDataTableBuilder
+driveImportName.UserService_.gs=UserService_
 driveImportName.Utils_.gs=Utils_
 driveScriptId.API.gs=60a64bca-bf4c-4df7-abd0-f57a11ea85dc
 driveScriptId.Account.gs=76fff2dc-9eef-4ed6-a56b-04325d136cbc
@@ -51,6 +52,7 @@ driveScriptId.TransactionIterator.gs=d1d12d0b-b0fa-479e-a60f-155d960cb725
 driveScriptId.TransactionPage_.gs=91a60484-bd9a-4710-b967-d3df28a2742e
 driveScriptId.TransactionService_.gs=3b3e4f66-d6dc-4997-9143-16a7bde65d6c
 driveScriptId.TransactionsDataTableBuilder.gs=2ae2f75c-b812-4e80-920f-ca39983805c6
+driveScriptId.UserService_.gs=3d4fef6c-49b7-48b8-b067-ab8eca68eba9
 driveScriptId.Utils_.gs=2528178f-402e-4272-9fc4-daaa757410ad
 driveScriptType.API.gs=server_js
 driveScriptType.Account.gs=server_js
@@ -77,6 +79,7 @@ driveScriptType.TransactionIterator.gs=server_js
 driveScriptType.TransactionPage_.gs=server_js
 driveScriptType.TransactionService_.gs=server_js
 driveScriptType.TransactionsDataTableBuilder.gs=server_js
+driveScriptType.UserService_.gs=server_js
 driveScriptType.Utils_.gs=server_js
-driveVersionFingerprint=94c182b02e28ebf23b731ec5278ed0f3
+driveVersionFingerprint=f3e21e625c6cd0ce83a0040e93bd2118
 eclipse.preferences.version=1
