New documentation generation

--- a/package.json
+++ b/package.json
@@ -5,7 +5,19 @@
   "repository": "https://github.com/bkper/BkperApp",
   "author": "Bkper Inc.",
   "private": true,
+  "scripts": {
+    "clean": "rm -rf ./docs",
+    "docs": "./node_modules/.bin/jsdoc -c jsdoc.json && yarn docs:images",
+    "docs:images": "cp -rf ./images ./docs",
+    "docs:publish": "cp -rf ./docs/* ../bkper.github.io/",
+    "copy": "yarn copy:images && yarn copy:docs",
+    "clasp": "./node_modules/.bin/clasp",
+    "start": "watch 'yarn run jsdoc' ./ --ignoreDirectoryPattern=/docs/" 
+  },
   "devDependencies": {
-    "jsdoc": "^3.6.3"
+    "@google/clasp": "^2.2.1",
+    "better-docs": "^1.1.6",
+    "jsdoc": "^3.6.3",
+    "watch": "^1.0.2"
   }
 }
