--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bkper-app-gs",
+  "name": "bkper-app",
   "version": "1",
   "description": "BkperApp Google Script library",
   "repository": "https://github.com/bkper/BkperApp",
@@ -7,12 +7,10 @@
   "private": true,
   "scripts": {
     "clean": "rm -rf ./docs",
-    "docs": "./node_modules/.bin/jsdoc -c jsdoc.json",
-    "docs:images": "cp -rf ./images ./docs",
-    "docs:publish": "yarn docs:images && cp -rf ./docs/* ../bkper.github.io/",
-    "copy": "yarn copy:images && yarn copy:docs",
+    "docs": "./node_modules/.bin/jsdoc -c jsdoc.json && cp -rf ./docs/* ./dist/docs",
+    "docs:publish": "yarn docs && cp -rf ./dist/docs/* ../bkper.github.io/",
     "clasp": "./node_modules/.bin/clasp",
-    "start": "watch 'yarn run jsdoc' ./ --ignoreDirectoryPattern=/docs/"
+    "start": "watch 'yarn run docs' ./ --ignoreDirectoryPattern=/dist/"
   },
   "devDependencies": {
     "@google/clasp": "^2.2.1",
