--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bkper-app",
   "version": "1",
   "description": "BkperApp Google Script library",
-  "repository": "https://github.com/bkper/BkperApp",
+  "repository": "https://github.com/bkper/bkper-app",
   "author": "Bkper Inc.",
   "private": true,
   "scripts": {
