--- a/package.json
+++ b/package.json
@@ -7,19 +7,18 @@
   "private": true,
   "scripts": {
     "clean": "rm -rf ./dist",
-    "build": "cp -rf src/BkperApp/index.ts ../bkper-app-samples/bkper-auth/@types/bkper-app/index.d.ts",
-    "docs": "./node_modules/.bin/typedoc ./src --ignoreCompilerErrors --excludeExternals --includeDeclarations --excludePrivate --hideGenerator --name  'BkperApp' ",
-    "docs:html": "yarn docs --out dist/docs --theme minimal --mode file  && cp -rf ./docs/* ./dist/docs",
-    "docs:json": "yarn docs --json dist/apidocs.json --mode modules",
+    "build": "yarn run docs && yarn run types",
+    "docs": "./node_modules/.bin/typedoc ./src --ignoreCompilerErrors --excludeExternals --includeDeclarations --excludePrivate --hideGenerator --name  'BkperApp' --out dist/docs --theme minimal --mode file  && cp -rf ./docs/* ./dist/docs",
     "docs:publish": "yarn docs && cp -rf ./dist/docs/* ../bkper.github.io/",
     "clasp": "./node_modules/.bin/clasp",
-    "types": "tsc src/library/* --declaration --declarationDir 'dist/types' --emitDeclarationOnly ",
+    "types": "mkdir -p dist && mkdir -p dist/bkper-app && cp src/library/index.ts dist/bkper-app/index.d.ts",
     "push": "yarn run clasp push",
     "api": "yarn --cwd ../bkper-pwa/api-typings-generator build --url http://app.bkper.com/_ah/api/discovery/v1/apis/bkper/v2/rest --out /Users/maelcaldas/git/bkper-app/@types"
   },
   "devDependencies": {
     "@google/clasp": "^2.2.1",
     "@types/google-apps-script": "^0.0.56",
+    "copyfiles": "^2.1.1",
     "typedoc": "^0.15.0"
   }
 }
