--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "noImplicitUseStrict": true,
     "noImplicitAny": true,
     "experimentalDecorators": true,
-    "outFile": "dist/BkperApp.js"
+    "outFile": "dist/bundle.js"
   },
   "include": [
     "src/**/*.ts",
