Muting docs logs

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "clean": "rm -rf ./dist",
     "pretest": "tsc --skipLibCheck --sourcemap",
     "test": "mocha --require source-map-support/register dist/bundle.js",
-    "docs": "./node_modules/.bin/typedoc ./@types/google-apps-script.bkper --ignoreCompilerErrors --excludeExternals --includeDeclarations --mode file --json dist/apidocs.json ",
+    "posttest": "yarn clean",
+    "docs": "./node_modules/.bin/typedoc ./@types/google-apps-script.bkper --ignoreCompilerErrors --excludeExternals --includeDeclarations --mode file --json dist/apidocs.json --logger none",
     "docs:publish": "yarn docs && cp dist/apidocs.json ../bkper-site/client/static/_data/ && cp ./@types/google-apps-script.bkper/index.d.ts ../bkper-site/client/static/api/google-apps-script.bkper.d.ts",
     "postdocs:publish": "cp -rf @types/google-apps-script.bkper ../bkper-sheets/server/@types/google-apps-script.bkper",
     "docs:watch": "watch 'yarn run docs:publish' ./@types/google-apps-script.bkper",
