--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "yarn build && mocha --require source-map-support/register dist/bundle.js",
     "docs": "./node_modules/.bin/typedoc ./@types/google-apps-script.bkper --ignoreCompilerErrors --excludeExternals --includeDeclarations --mode file --json dist/apidocs.json ",
     "docs:publish": "yarn docs && cp dist/apidocs.json ../bkper-site/client/static/_data/ && cp ./@types/google-apps-script.bkper/index.d.ts ../bkper-site/client/static/api/google-apps-script.bkper.d.ts",
-    "postdocs:publish": "cp -rf @types/google-apps-script.bkper ../bkper-sheets/server/@types/google-apps-script.bkper",
+    "postdocs:publish": "cp @types/google-apps-script.bkper/index.d.ts ../bkper-sheets/server/@types/google-apps-script.bkper/index.d.ts",
     "docs:watch": "watch 'yarn run docs:publish' ./@types/google-apps-script.bkper",
     "clasp": "./node_modules/.bin/clasp",
     "prepush": "yarn run test",
