--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "author": "Bkper Inc.",
   "private": true,
   "scripts": {
-    "clean": "rm -rf ./build",
-    "build": "tsc --skipLibCheck --sourcemap --outFile build/test-bundle.js --module system", 
-    "test": "yarn build && mocha --require source-map-support/register build/test-bundle.js",
+    "clean": "rimraf build",
+    "build": "tsc --skipLibCheck --sourcemap --outFile build/test-bundle.js --module system",
+    "prestest": "yarn build",
+    "test": "mocha --require source-map-support/register build/test-bundle.js",
     "docs": "typedoc ./@types/google-apps-script.bkper --ignoreCompilerErrors --excludeExternals --includeDeclarations --mode file --json build/apidocs.json ",
     "docs:publish": "yarn docs && cp build/apidocs.json ../bkper-site/client/static/_data/ && cp ./@types/google-apps-script.bkper/index.d.ts ../bkper-site/client/static/api/google-apps-script.bkper.d.ts",
     "postdocs:publish": "cp @types/google-apps-script.bkper/index.d.ts ../bkper-sheets/server/@types/google-apps-script.bkper/index.d.ts",
     "docs:watch": "watch 'yarn run docs:publish' ./@types/google-apps-script.bkper",
-    "clasp": "clasp",
     "prepush": "yarn run test",
-    "push": "yarn run clasp push",
+    "push": "yarn clasp push",
     "api": "yarn --cwd ../bkper-pwa/api-typings-generator build --url http://app.bkper.com/_ah/api/discovery/v1/apis/bkper/v2/rest --out /Users/maelcaldas/git/bkper-app/@types"
   },
   "devDependencies": {
@@ -25,6 +25,7 @@
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
     "mocha": "^6.2.0",
+    "rimraf": "^3.0.0",
     "source-map-support": "^0.5.13",
     "typedoc": "^0.15.0",
     "watch": "^1.0.2"
