--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "prestest": "yarn build",
     "test": "mocha --require source-map-support/register build/test-bundle.js",
     "docs": "typedoc ./@types/google-apps-script.bkper --ignoreCompilerErrors --excludeExternals --includeDeclarations --mode file --json build/apidocs.json ",
-    "docs:publish": "yarn docs && cp build/apidocs.json ../bkper-site/client/static/_data/ && cp ./@types/google-apps-script.bkper/index.d.ts ../bkper-site/client/static/api/google-apps-script.bkper.d.ts",
+    "docs:publish": "cp build/apidocs.json ../bkper-site/client/static/_data/ && cp ./@types/google-apps-script.bkper/index.d.ts ../bkper-site/client/static/api/google-apps-script.bkper.d.ts",
     "postdocs:publish": "cp @types/google-apps-script.bkper/index.d.ts ../bkper-sheets/server/@types/google-apps-script.bkper/index.d.ts",
-    "docs:watch": "watch 'yarn run docs:publish' ./@types/google-apps-script.bkper",
+    "docs:watch": "watch 'yarn docs && yarn run docs:publish' ./@types/google-apps-script.bkper",
     "prepush": "yarn run test",
     "push": "yarn clasp push",
     "api": "yarn --cwd ../bkper-pwa/api-typings-generator build --url http://app.bkper.com/_ah/api/discovery/v1/apis/bkper/v2/rest --out /Users/maelcaldas/git/bkper-app/@types"
