--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "scripts": {
     "clean": "rimraf build",
+    "open": "clasp open",
     "build": "tsc --skipLibCheck --sourcemap --outFile build/test-bundle.js --module system",
     "prestest": "yarn build",
     "test": "mocha --require source-map-support/register build/test-bundle.js",
