--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
   "name": "bkper-app",
   "version": "1",
-  "description": "BkperApp Google Script library",
-  "repository": "https://github.com/bkper/bkper-app",
-  "author": "Bkper Inc.",
+  "description": "Google Apps Script library for Bkper",
+  "homepage": "https://bkper.com/api",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bkper/bkper-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/bkper/bkper-issues/issues",
+    "email": "support@bkper.com"
+  },
+  "author": {
+    "name": "Mael",
+    "url": "https://github.com/maelcaldas"
+  },
   "private": true,
   "scripts": {
     "clean": "rimraf build",
