Fixing null error when no balance

--- a/package.json
+++ b/package.json
@@ -19,18 +19,19 @@
   "scripts": {
     "clean": "rimraf build",
     "open": "clasp open",
-    "build": "tsc --skipLibCheck --sourcemap --outFile build/test-bundle.js --module system",
-    "prestest": "yarn build",
-    "test": "mocha --require source-map-support/register build/test-bundle.js",
-    "docs": "typedoc ./@types/google-apps-script.bkper --ignoreCompilerErrors --excludeExternals --includeDeclarations --mode file --json build/apidocs.json ",
-    "docs:publish": "cp build/apidocs.json ../bkper-site/client/static/_data/ && cp ./@types/google-apps-script.bkper/index.d.ts ../bkper-site/client/static/api/google-apps-script.bkper.d.ts",
-    "postdocs:publish": "cp @types/google-apps-script.bkper/index.d.ts ../bkper-sheets/server/@types/google-apps-script.bkper/index.d.ts",
-    "docs:watch": "watch 'yarn docs && yarn run docs:publish' ./@types/google-apps-script.bkper",
-    "prepush": "yarn run test",
-    "push": "yarn clasp push",
     "predts": "yarn remove @types/google-apps-script",
     "dts": "clasp-dts --out build",
     "postdts": "yarn add --dev @types/google-apps-script",
+    "build": "tsc --skipLibCheck --sourcemap --outFile build/test-bundle.js --module system",
+    "pretest": "yarn build",
+    "test": "mocha --require source-map-support/register build/test-bundle.js",
+    "predocs": "yarn run dts",
+    "docs": "typedoc ./build/google-apps-script.bkper --ignoreCompilerErrors --excludeExternals --includeDeclarations --mode file --json build/apidocs.json ",
+    "docs:publish": "cp build/apidocs.json ../bkper-site/client/static/_data/ && cp ./build/google-apps-script.bkper/index.d.ts ../bkper-site/client/static/api/google-apps-script.bkper.d.ts",
+    "postdocs:publish": "cp build/google-apps-script.bkper/index.d.ts ../bkper-sheets/server/@types/google-apps-script.bkper/index.d.ts",
+    "docs:watch": "watch 'yarn docs && yarn run docs:publish' ./src",
+    "prepush": "yarn run test",
+    "push": "yarn clasp push",
     "api": "yarn --cwd ../bkper-pwa/api-typings-generator build --url http://app.bkper.com/_ah/api/discovery/v1/apis/bkper/v2/rest --out /Users/maelcaldas/git/bkper-app/@types"
   },
   "devDependencies": {
