Adding readme and organizing scripts

--- a/package.json
+++ b/package.json
@@ -18,21 +18,20 @@
   "scripts": {
     "clean": "rimraf build",
     "open": "clasp open",
-    "predts": "yarn remove @types/google-apps-script",
-    "dts": "clasp-dts-gen --out dist",
-    "postdts": "yarn add --dev @types/google-apps-script",
-    "build": "tsc --skipLibCheck --sourcemap --outFile build/test-bundle.js --module system",
-    "pretest": "yarn build",
-    "test": "mocha --require source-map-support/register build/test-bundle.js",
-    "predocs": "yarn dts",
-    "docs": "typedoc ./dist/google-apps-script.bkper --ignoreCompilerErrors --excludeExternals --includeDeclarations --mode file --json build/apidocs.json ",
-    "predocs:publish": "yarn docs",
-    "docs:publish": "cp dist/apidocs.json ../bkper-site/client/static/_data/ && cp ./dist/index.d.ts ../bkper-site/client/static/api/google-apps-script.bkper.d.ts",
-    "postdocs:publish": "cp dist/* ../bkper-sheets/server/node_modules/bkper-app/",
-    "docs:watch": "watch 'yarn docs && yarn run docs:publish' ./src",
+    "dist":"run-p dist:*",
+    "dist:dts": "clasp-dts-gen --out dist",
+    "dist:readme": "cp README.md dist/",
+    "dist:license": "cp LICENSE dist/",
+    "test": "run-s test:*",
+    "test:bundle": "tsc --skipLibCheck --sourcemap --outFile build/test-bundle.js --module system",
+    "test:run": "mocha --require source-map-support/register build/test-bundle.js",
+    "docs": "run-s docs:*",
+    "docs:gen": "typedoc ./dist/google-apps-script.bkper --ignoreCompilerErrors --excludeExternals --includeDeclarations --mode file --json build/apidocs.json ",
+    "docs:pub": "cp dist/apidocs.json ../bkper-site/client/static/_data/ && cp ./dist/index.d.ts ../bkper-site/client/static/api/google-apps-script.bkper.d.ts",
+    "docs:deploy": "cp dist/* ../bkper-sheets/server/node_modules/bkper-app/",
+    "watch": "watch 'yarn docs && yarn run docs:publish' ./src",
     "prepush": "yarn run test",
-    "push": "yarn clasp push",
-    "api": "yarn --cwd ../bkper-pwa/api-typings-generator build --url http://app.bkper.com/_ah/api/discovery/v1/apis/bkper/v2/rest --out /Users/maelcaldas/git/bkper-app/@types"
+    "push": "clasp push"
   },
   "devDependencies": {
     "@google/clasp": "^2.2.1",
@@ -41,6 +40,7 @@
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
     "mocha": "^6.2.0",
+    "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.0",
     "source-map-support": "^0.5.13",
     "typedoc": "^0.15.0",
