--- a/dts/package.json
+++ b/dts/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@bkper/bkperapp",
+  "name": "@bkper/bkper-app-dts",
   "version": "1.0.0",
-  "description": "Google Apps Script library for Bkper",
+  "description": "Typescript definitions for BkperApp",
   "homepage": "https://bkper.com/api",
   "repository": {
     "type": "git",
