Package author to bkper, Inc.

--- a/dts/package.json
+++ b/dts/package.json
@@ -12,8 +12,8 @@
     "email": "support@bkper.com"
   },
   "author": {
-    "name": "Mael",
-    "url": "https://github.com/maelcaldas"
+    "name": "bkper, Inc",
+    "url": "https://bkper.com"
   },
   "scripts": {},
   "devDependencies": {},
