--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bkper/bkper-app",
+  "name": "bkper-app",
   "version": "1.0.0",
   "description": "Google Apps Script library for Bkper",
   "homepage": "https://bkper.com/api",
